# GEOMETRIA

./: CMakeLists.txt  a.out  asdad  ekran.cpp  ekran.hpp  figury.cpp  figury.hpp  geometria.cpp  geometria.hpp  header.hpp  kwadrat.cpp  kwadrat.hpp  main.cpp  makefile  prostokat.cpp  prostokat.hpp  romb.cpp  romb.hpp  rownoleglobok.cpp  rownoleglobok.hpp  trojkat.cpp  trojkat.hpp  wektor.cpp  wektor.hpp  wielokat.cpp  wielokat.hpp
